# sophia

./: .gitignore  CMakeLists.txt  README.md  build.sh  grammar.ebnf
example/: main.sph
src/: libcore.cpp  libcore.hpp  main.cpp
src/core/: list.hpp  token.hpp
src/program/: env.hpp  program.cpp  program.hpp  value.hpp
src/syntax/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
